@startuml

package "Job Openings" #aabbcc {
    class JobOpening {
        - title: String
        - description: String
        - contractType: String
        - mode: String
        - numberOfVacancies: int
    }

    class JobReference <<Value Object>> <<Id>> {
        - reference: String
    }

    class JobOpeningDate <<Value Object>> {
        - startDate: Date
        - endDate: Date
    }

    JobOpening "1" *-up-> "1" JobReference: reference
    JobOpening "1" *--> "1" JobOpeningDate: startDate
    JobOpening "1" *--> "1" JobOpeningDate: endDate
}

package "Customers" #bbaacc {
    class Customer {
        - companyName: String
    }

    class CustomerId <<Value Object>> <<Identifier>> {
        - id: Long
    }

    class CustomerName <<Value Object>> {
        - name: String
    }

    Customer "1" *--> "1" CustomerId: id
    Customer "1" *--> "1" CustomerName: name
    Customer "*" o--> "1" JobOpening: opening
}

@enduml